plugins {
    id 'java'
}

allprojects {
    group = rootProject.property('mod_group')
    version = rootProject.property('mod_version')
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
        withSourcesJar()
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = 'UTF-8'
        it.options.release = 17
    }

    repositories {
        mavenCentral()
        maven { url = 'https://maven.fabricmc.net/' }
        maven { url = 'https://maven.minecraftforge.net/' }
    }

    tasks.withType(Jar).configureEach {
        manifest {
            attributes(
                    'Implementation-Title': rootProject.property('mod_name'),
                    'Implementation-Version': project.version,
                    'Implementation-Vendor': rootProject.property('mod_authors')
            )
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'org.slf4j:slf4j-api:2.0.13'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.13'
}

sourceSets {
    main {
        java {
            srcDir 'common/src/main/java'
            exclude 'com/stromblex/vartapack/client/**'
        }
    }
}

test {
    useJUnitPlatform()
}
